--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,24 @@
 img {
     max-width: 100%;
 }
+
+<style>
+        .main {
+            display: flex;
+
+        }
+
+        .base {
+            position: absolute;
+            max-width: 100%;
+        }
+
+        .overlay {
+            z-index: 1;
+            position: absolute;
+            width: 20%;
+            margin-top: 45%;
+            margin-left: 40%;
+
+        }
+    </style>
