--- a/assets/main.css
+++ b/assets/main.css
@@ -14,8 +14,7 @@ img {
         .overlay {
             z-index: 1;
             position: absolute;
-            width: 4%;
-            margin-top: 15%;
-            margin-left: 10%;
+            width: auto;
+            height:auto;
 
         }
