--- a/assets/main.css
+++ b/assets/main.css
@@ -14,7 +14,7 @@ img {
         .overlay {
             z-index: 1;
             position: absolute;
-            width: auto;
-            height:auto;
+            max-width: 100%;
+            max-height: 100%;
 
         }
