--- a/assets/main.css
+++ b/assets/main.css
@@ -17,6 +17,7 @@ img {
             z-index: 1;
             position: absolute;
             max-width: 100%;
-            max-height: 50%;
+            max-height: 100%;
+            margin: auto;
 
         }
