--- a/assets/main.css
+++ b/assets/main.css
@@ -18,6 +18,7 @@ img {
             position: absolute;
             max-width: 100%;
             max-height: 100%;
-            margin: auto;
+            margin-top: auto;
+            margin-bottom: auto;
 
         }
