--- a/assets/main.css
+++ b/assets/main.css
@@ -18,7 +18,6 @@ img {
             position: absolute;
             max-width: 100%;
             max-height: 100%;
-            margin-top: auto;
-            margin-bottom: auto;
+            margin-top: 40%;
 
         }
