--- a/assets/main.css
+++ b/assets/main.css
@@ -16,8 +16,8 @@ img {
         .overlay {
             z-index: 1;
             position: absolute;
-            max-width: 100%;
-            max-height: 100%;
+            width: auto;
+            margin-left: 5%;
             margin-top: 5%;
 
         }
