--- a/assets/main.css
+++ b/assets/main.css
@@ -17,7 +17,7 @@ img {
             z-index: 1;
             position: absolute;
             width: auto;
-            margin-left: 5%;
-            margin-top: 5%;
+            top: 0;
+            left: 0;
 
         }
