--- a/assets/main.css
+++ b/assets/main.css
@@ -17,7 +17,7 @@ img {
             z-index: 1;
             position: absolute;
             width: auto;
-            top: 0;
-            left: 0;
+            margin-top: 5px;
+            margin-left: 5px;
 
         }
