--- a/assets/main.css
+++ b/assets/main.css
@@ -16,9 +16,14 @@ img {
 
         .overlay {
             z-index: 1;
-            position: absolute;
-            max-width: auto;
-            margin-top: 10%;
-            margin-left: 10%;
+            position: fixed;
+            position: fixed;
+            display: none;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
 
         }
