--- a/assets/main.css
+++ b/assets/main.css
@@ -16,14 +16,10 @@ img {
 
         .overlay {
             z-index: 1;
-            position: fixed;
-            position: fixed;
+            position: absolute;
             display: none;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            width: 20%;
+            margin-top: 45%;
+            margin-left: 40%;
 
         }
