--- a/assets/main.css
+++ b/assets/main.css
@@ -1,6 +1,10 @@
+/*
 img {
     max-width: 100%;
 }
+*/
+
+ <style>
         .main {
             display: flex;
 
@@ -8,18 +12,15 @@ img {
 
         .base {
             position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 0;
             max-width: 100%;
         }
 
         .overlay {
             z-index: 1;
             position: absolute;
-            display: none;
-            width: 20%;
-            margin-top: 45%;
-            margin-left: 40%;
+            width: 10%;
+            margin-top: 5%;
+            margin-left: 4%;
 
         }
+    </style>
